<resources>
    <string name="app_name">apkCavoshCafeS101</string>
    <string name="inicio">Inicio</string>
    <string name="menu">Menu</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="carrito">Carrito</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empezar">Empezar</string>
    <string name="registrar">Registrar</string>
    <string name="ingresar">Ingresar</string>
    <string name="correo">Correo</string>
    <string name="passwordd">Contraseña</string>
    <string name="olvidar_contrasena">¿ Olvidaste tu contraseña?</string>
    <string name="content_description">content_description</string>

</resources>