<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/sh_bg_header_police_blue"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:text="Let´s get you signed in!"
            android:textColor="@color/flesh"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"

        >
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >


            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_bg_btn_carmine_pink"
                android:text="@string/ingresar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:translationZ="5dp"
                />

            <Button
                android:id="@+id/btnSignup"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-36dp"
                android:background="@drawable/sh_bg_btn_bright_gray"
                android:text="@string/registrar"
                android:textAllCaps="false"
                android:textColor="@color/gunmetal"
                android:textSize="16sp"
                android:textStyle="bold"
                />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:hintEnabled="false"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/steel_teal"
                android:hint="@string/correo" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="textPassword"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/steel_teal"
                android:hint="@string/passwordd"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/olvidar_contrasena"
            android:textColor="@color/carmine_pink"
            android:textStyle="bold"
            android:textSize="16sp"

            />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="30dp"
            android:background="@drawable/sh_bg_btn_gunmetal"
            android:text="@string/ingresar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/carmine_pink"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Or login with"
                android:textColor="@color/police_blue"
                android:textStyle="bold"/>

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:background="@color/carmine_pink"/>


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <ImageView
                android:id="@+id/facebook_icon"
                android:layout_width="104dp"
                android:layout_height="70dp"
                android:background="@drawable/sh_bg_btn_dust_storm"
                android:contentDescription="@string/content_description"

                android:padding="18dp"
                android:src="@drawable/ic_facebook">
            </ImageView>

            <ImageView
                android:id="@+id/google_plus_icon"
                android:layout_width="104dp"
                android:layout_height="70dp"
                android:layout_marginStart="125dp"
                android:background="@drawable/sh_bg_btn_dust_storm"
                android:contentDescription="@string/content_description"

                android:padding="3dp"
                android:src="@drawable/ic_google_plus">
            </ImageView>

            <ImageView
                android:id="@+id/apple_icon"
                android:layout_width="104dp"
                android:layout_height="70dp"
                android:layout_marginStart="250dp"
                android:background="@drawable/sh_bg_btn_dust_storm"
                android:contentDescription="@string/content_description"

                android:padding="18dp"
                android:src="@drawable/ic_apple">
            </ImageView>


        </FrameLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account?"
        android:layout_gravity="bottom"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/police_blue"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register Now"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/carmine_pink"
        android:textStyle="bold"/>
</FrameLayout>
