<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingHorizontal="16dp"
        android:gravity="start|center"
        android:text="Let´s get you registered!"
        android:textColor="@color/flesh"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/sh_bg_header_police_blue"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"

        >
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >


            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_bg_btn_bright_gray"
                android:text="@string/ingresar"
                android:textAllCaps="false"
                android:textColor="@color/gunmetal"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btnSignup"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-36dp"
                android:background="@drawable/sh_bg_btn_carmine_pink"
                android:text="@string/registrar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tilFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:hintEnabled="false"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="text"
                android:maxLength="30"
                android:padding="16dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/steel_teal"
                android:hint="Nombre Completo" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/til_reg_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintEnabled="false"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/steel_teal"
                android:hint="Correo electronico"

                />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="textPassword"
                android:padding="16dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/steel_teal"
                android:hint="@string/passwordd"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tiltPasswwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="textPassword"
                android:paddingHorizontal="16dp"
                android:padding="16dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/steel_teal"
                android:hint="Confirmar Contraseña"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/sh_bg_btn_gunmetal"
            android:text="Registrar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/carmine_pink"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Or register with"
                android:textColor="@color/police_blue"
                android:textStyle="bold"/>

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:background="@color/carmine_pink"/>


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp">
            <ImageView
                android:id="@+id/facebook_icon"
                android:layout_width="104dp"
                android:layout_height="70dp"
                android:background="@drawable/sh_bg_btn_dust_storm"
                android:contentDescription="@string/content_description"
                app:tint="#074c8e"
                android:padding="18dp"
                android:src="@drawable/ic_facebook">
            </ImageView>

            <ImageView
                android:id="@+id/google_plus_icon"
                android:layout_width="104dp"
                android:layout_height="70dp"
                android:layout_marginStart="125dp"
                android:background="@drawable/sh_bg_btn_dust_storm"
                android:contentDescription="@string/content_description"
                app:tint="#cd4c31"
                android:padding="3dp"
                android:src="@drawable/ic_google_plus">
            </ImageView>

            <ImageView
                android:id="@+id/apple_icon"
                android:layout_width="104dp"
                android:layout_height="70dp"
                android:layout_marginStart="250dp"
                android:background="@drawable/sh_bg_btn_dust_storm"
                android:contentDescription="@string/content_description"

                android:padding="18dp"
                android:src="@drawable/ic_apple">
            </ImageView>


        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textColor="@color/police_blue"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="Login now"
            android:textColor="@color/carmine_pink"
            android:textStyle="bold"/>
    </LinearLayout>


</FrameLayout>